# Multi-Language-CD-Manager

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  REVERSE_ENGINEERING_KUREHA_CD_TEXT.md  跨平台CD管理器计划.docx  跨平台CD管理器计划.pages  跨平台CD管理器计划.txt
.claude/: settings.local.json
app/include/cdmanager/application/: CdTextPreparationService.h  CdTextPreviewBuilder.h  CdTextTypes.h  CdTextWritePayloadBuilder.h  CdTextWritePlanBuilder.h  ExportService.h  PlaybackService.h  ProjectOverview.h  ProjectOverviewBuilder.h  ProjectValidationService.h  ValidationTypes.h
app/include/cdmanager/application/burn/: CdTextPackAssembler.h  CdTextPackTypes.h
app/include/cdmanager/application/import/: DiscAnalysisService.h  DiscImportResult.h  DiscImportService.h
app/include/cdmanager/domain/cdtext/: CdTextField.h
app/include/cdmanager/domain/disc/: DiscSnapshot.h  DriveInfo.h
app/include/cdmanager/domain/project/: CdProject.h  Track.h
app/include/cdmanager/infrastructure/audio/: AudioBurnSourcePreparer.h  AudioCdReader.h  AudioOutput.h  AudioRingBuffer.h
app/include/cdmanager/infrastructure/burn/: CdrdaoBurner.h  CdrecordBurner.h  DiscRecordingBurner.h  DrutilBurner.h  TocFileWriter.h
app/include/cdmanager/infrastructure/disc/: DiscDeviceGateway.h  DiscDeviceGatewayFactory.h  DiscKeepAlive.h  DiscMediaMonitor.h  DrutilCommandRunner.h  DrutilOutputParser.h  LegacySampleDiscGateway.h  SystemDiscGateway.h
app/include/cdmanager/infrastructure/encoding/: JapaneseFullwidthNormalizer.h  MsJisCodec.h
app/include/cdmanager/presentation/editor/: AlbumDetailsWidget.h  BurnWidget.h  CdTextPreviewWidget.h  DiscAnalysisWidget.h  ExportWidget.h  TrackTableWidget.h
app/include/cdmanager/presentation/mainwindow/: MainWindow.h
app/include/cdmanager/presentation/ui/: MacVisualEffectHelper.h  UiPreferences.h
app/include/cdmanager/tools/cdtextdiff/: CdTextDiffEngine.h  CdTextDiffTypes.h  CdTextDocumentParser.h  CurrentProjectPackExporter.h
app/src/: main.cpp
app/src/application/: CdTextPreparationService.cpp  CdTextPreviewBuilder.cpp  CdTextWritePayloadBuilder.cpp  CdTextWritePlanBuilder.cpp  ExportService.cpp  PlaybackService.cpp  ProjectOverviewBuilder.cpp  ProjectValidationService.cpp
app/src/application/burn/: CdTextPackAssembler.cpp
app/src/application/import/: DiscAnalysisService.cpp  DiscImportService.cpp
app/src/domain/project/: CdProject.cpp  Track.cpp
app/src/infrastructure/audio/: AudioBurnSourcePreparer.cpp  AudioCdReader.cpp  AudioOutput.cpp  AudioRingBuffer.cpp
app/src/infrastructure/burn/: CdrdaoBurner.cpp  CdrecordBurner.cpp  DiscRecordingBurner.mm  DrutilBurner.cpp  TocFileWriter.cpp
app/src/infrastructure/disc/: DiscDeviceGatewayFactory.cpp  DiscKeepAlive.cpp  DiscMediaMonitor.mm  DrutilCommandRunner.cpp  DrutilOutputParser.cpp  LegacySampleDiscGateway.cpp  SystemDiscGateway.cpp
app/src/infrastructure/encoding/: JapaneseFullwidthNormalizer.cpp  MsJisCodec.cpp
app/src/presentation/editor/: AlbumDetailsWidget.cpp  BurnWidget.cpp  CdTextPreviewWidget.cpp  DiscAnalysisWidget.cpp  ExportWidget.cpp  TrackTableWidget.cpp
app/src/presentation/mainwindow/: MainWindow.cpp
app/src/presentation/ui/: MacVisualEffectHelper.mm  UiPreferences.cpp
app/src/tools/cdtextdiff/: CdTextDiffEngine.cpp  CdTextDiffTypes.cpp  CdTextDocumentParser.cpp  CurrentProjectPackExporter.cpp  discrecording_check_main.mm  main.cpp
cmake/: cdtext_diff_reference_sample_exact.cmake  cdtext_export_reference_sample_artifacts.cmake  cdtext_export_reference_sample_roundtrip.cmake  cdtext_export_reference_sample_sony_bin.cmake  cdtext_project_json_empty_track_artist_uses_empty_string.cmake  cdtext_project_json_preserves_track1_title.cmake
files/: 1  2.docx  2.pages  disc.cue  未命名.docx  未命名.pages
files/untitled folder/: disc.cue
reference_samples/kureha_success_sana_collection_06/: README.txt  cdrdao-cdtext.txt  cdrdao-read-toc.txt  cdtext-summary.json  cdtext-summary.txt  diskutil-info.txt  drutil-cdtext.plist  drutil-status.txt  drutil-toc.txt  sample-read.toc
reference_samples/test_disc_03/: README.txt  cdrdao-cdtext.txt  cdtext-summary.json  cdtext-summary.txt  drutil-cdtext.plist  drutil-status.txt  drutil-toc.txt
reference_samples/test_disc_04/: README.txt  cdrdao-cdtext.txt  cdrdao-read-toc.txt  cdtext-summary.json  cdtext-summary.txt  diskutil-info.txt  diskutil-unmount-before-cdrdao-cdtext-2.txt  diskutil-unmount-before-cdrdao-cdtext.txt  drutil-cdtext.plist  drutil-status.txt
reference_samples/test_disc_05_failed_cdrecord_burn/: README.txt  cdrdao-read-toc.txt  cdrecord-toc-after-unmount.txt  cdrecord-toc.txt  cdtext-summary.json  cdtext-summary.txt  diskutil-info.txt  drutil-cdtext.plist
reference_samples/test_disc_06_half_burn_w789_only/: README.txt  cdrdao-cdtext.txt  cdrdao-disk-info.txt  cdrdao-read-toc.txt  cdtext-summary.txt  diskutil-info.txt  drutil-cdtext.plist  sample-read.toc
reference_samples/test_disc_06_half_burn_w789_only/retry_after_clear/: drutil-list.txt
reference_samples/test_disc_07_kureha_burn_elma/: README.txt  cdrdao-cdtext.txt  cdrdao-read-toc.txt  cdtext-summary.txt  sample-read.toc
